# graficas

./: .gitignore  main.py  pyproject.toml  table.py  visualizador.py
archivos/: game_stats.xlsx  performance_metrics.csv  sales_data.csv
charts/: __init__.py  chart_strategy.py  grafica.py  grafica_circular.py  grafica_de_barras.py  grafica_de_lineas.py
reader/: __init__.py  csv_reader.py  database_reader.py  excel_reader.py  reader.py
readers/: __init__.py  csv_reader.py  database_reader.py  excel_reader.py  reader_strategy.py
