[tool.poetry]
name = "graficas"
version = "0.1.0"
description = ""
authors = ["Carlos Alberto Baltazar Hinojosa <A840159943@my.uvm.edu.mx>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.25.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
